# ads

./: .editorconfig  .gitignore  README.md
cw-2022/: 1301_Ustinov_GA_cw.odt  CMakeLists.txt
cw-2022/src/: main.cpp  parsing-exceptions.hh  parsing-table.cpp  parsing-table.hh  parsing.cpp  parsing.hh
lab1/: 0302_Ustinov_GA_lb1.doc  0302_Ustinov_GA_lb1.odt
lab1-2021/: README.md
lab1-2021/src/: dlist.cpp  dlist.hh
lab1-2021/test/: CMakeLists.txt
lab1-2022/: 1301_Ustinov_GA_lb1.doc  1301_Ustinov_GA_lb1.odt  CMakeLists.txt
lab1-2022/src/: list.hh
lab1-2022/test/: CMakeLists.txt  lab1-test.cpp
lab1-2023/src/: CMakeLists.txt  bst.hh
lab1/src/: CMakeLists.txt  dlist.cpp  dlist.hh
lab1/test/: lab1-test.cpp
lab2/: 0302_Ustinov_GA_lb2.doc  0302_Ustinov_GA_lb2.odt  CMakeLists.txt
lab2-2021/: 0302_Ustinov_GA_lb2.odt  README.md
lab2-2021/src/: searches.hh  sorts.cpp
lab2-2021/test/: CMakeLists.txt  lab2-searches-test.cpp  lab2-sorts-test.cpp
lab2-2022/: 0302_Ustinov_GA_lb2.doc  1301_Ustinov_GA_lb2.odt  CMakeLists.txt
lab2-2022/data/: collect.py  launch.sh
lab2-2022/src/: CMakeLists.txt  generate.cpp  generate.hh  generator.cpp  main.cpp  snail.cpp  snail.hh  solve.cpp  solve.hh
lab2/src/: CMakeLists.txt  measure.cpp  searches.cpp  searches.hh  sorts.cpp  sorts.hh
lab2/test/: CMakeLists.txt  lab2-searches-test.cpp  lab2-sorts-test.cpp
lab3/: 0302_Ustinov_GA_lb3.odt
lab3-2021/: 0302_Ustinov_GA_lb3.doc  CMakeLists.txt  README.md
lab3-2021/src/: CMakeLists.txt  queue.hh  stack.hh
lab3-2021/test/: lab3-binary-heap-test.cpp  lab3-queue-test.cpp
lab3-2022/: 1301_Ustinov_GA_lb3.odt  CMakeLists.txt
lab3-2022/data/: collect_fast.py  collect_slow.py  generate.sh  launch.sh
lab3-2022/data/set-1/: bubble.txt  insertion.txt  merge.txt  quick.txt  selection.txt  shell.txt  stl.txt
lab3-2022/data/set-10/: bubble.txt  insertion.txt  merge.txt  quick.txt  selection.txt  shell.txt  stl.txt
lab3-2022/data/set-2/: bubble.txt  insertion.txt  merge.txt  quick.txt  selection.txt  shell.txt  stl.txt
lab3-2022/data/set-3/: bubble.txt  insertion.txt  merge.txt  quick.txt  selection.txt  shell.txt  stl.txt
lab3-2022/data/set-4/: bubble.txt  insertion.txt  merge.txt  quick.txt  selection.txt  shell.txt  stl.txt
lab3-2022/data/set-5/: bubble.txt  insertion.txt  merge.txt  quick.txt  selection.txt  shell.txt  stl.txt
lab3-2022/data/set-6/: bubble.txt  insertion.txt  merge.txt  quick.txt  selection.txt  shell.txt  stl.txt
lab3-2022/data/set-7/: bubble.txt  insertion.txt  merge.txt  quick.txt  selection.txt  shell.txt  stl.txt
lab3-2022/data/set-8/: bubble.txt  insertion.txt  merge.txt  quick.txt  selection.txt  shell.txt  stl.txt
lab3-2022/data/set-9/: bubble.txt  insertion.txt  merge.txt  quick.txt  selection.txt  shell.txt  stl.txt
lab3-2022/src/: CMakeLists.txt  generate.cpp  measure.cpp  sorts.hh
lab3/src/: binary_heap.cpp  binary_heap.hh  linear_container.hh  queue.hh  stack.hh
lab3/test/: CMakeLists.txt  lab3-queue-test.cpp  lab3-stack-test.cpp
lab4-2022/: 1301_Ustinov_GA_lb4.odt  CMakeLists.txt
lab4-2022/src/: CMakeLists.txt  bst.hh  component.hh  expression.cpp  expression.hh  main.cpp  parsing-exceptions.hh  parsing-table.cpp  parsing-table.hh  parsing.cpp  parsing.hh
